--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
-name: liboqs_flutter
-description: LibOqs for Flutter
+name: "liboqs_flutter"
+description: "LibOqs for Flutter"
 version: 0.0.1
-author:
+author: "Ryan Deschamps"
 homepage:
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.10.0"
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
